--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ssh2-sftp-client": "^9.0.4"
   },
   "scripts": {
     "start": "node app.js"
