--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.1231.0",
+    "body-parser": "^1.20.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "ssh2-sftp-client": "^9.0.4"
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.0.1",
+    "jquery": "^3.6.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "path": "^0.12.7",
+    "php-node": "^0.0.2",
+    "ssh2-sftp-client": "^9.0.4",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "node app.js"
